<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/green_back"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/screen"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:background="@color/light_green"
        android:gravity="center|end"
        android:padding="10dp"
        android:textColor="@color/darkblue"
        android:textSize="@dimen/text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ac"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:backgroundTint="@color/white"
            android:text="@string/ac"
            android:textColor="@color/red"
            android:textSize="@dimen/text_size"
            tools:ignore="ButtonStyle,NestedWeights" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/back"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/div"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/division"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/seven"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/_7"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            tools:ignore="ButtonStyle,NestedWeights" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/eight"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/_8"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nine"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/_9"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/multiply"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/multiply"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/four"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/_4"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/five"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/_5"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/six"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/_6"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/minus"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/minus"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/one"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/_1"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"

            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/three"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/_3"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"

            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/two"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/_2"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"

            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/plus"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/plus"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"

            />

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/zero"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/_0"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"

            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/point"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/point"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"

            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/equals"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:backgroundTint="@color/white"
            android:text="@string/equals"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"

            />

    </LinearLayout>


</LinearLayout>
